@startuml clientLayerClassDiagram

class StartPageController {
@FXML components
ObservableList<String> sortStrenghtSubcategories
ObservableList<String> sortCardioSubcategories
LogClient client

void addSessionButtonPushed(ActionEvent)
void closeView()
void onStatisticsPage(ActionEvent)
void replaceSubcategories()
void sort()
void updateList()
}

class AddNewSessionController {
@FXML components
LogClient client
HashMap<String, List<String>> categories
void backButtonPushed(ActionEvent)
void createSessionButtonPushed(ActionEvent)
void handleTagsSelector()
}

class StatisticsController {
@FXML components
ObservableList<String> exerciseTypeSelector
LogClient client
void onHandleData()
void onReturn(ActionEvent)
}

class App {
void main(String[])
void start(Stage)
}

class LogClient {
String url
int port
HashMap<String, String> getLogEntry(String id)
List<HashMao<String, String>> getLogEntryList(SortArgWrapper builder)
void addLogEntry(HashMap<String, String>)
void deleteLogEntry(String)
HashMap<String, String> getChartData(ListBuilder)
HashMap<String, String> getStatistics(ListBuilder)
}

StartPageController -->"1" LogClient
StatisticsController -->"1" LogClient
AddNewSessionController -->"1" LogClient

@enduml
